	  NANO_DOWN_KEY in the search history shortcut entries. (DLR)
	- Add NANO_UNJUSTIFY_FKEY (the same as NANO_UNCUT_FKEY) to the
	  shortcut list, and tweak the unjustify routine to use it.
	  (DLR)
	- Add more intuitive Meta-key aliases for moving to the
	  beginning and ending lines of a paragraph at the search
	  prompt: Meta-P and Meta-N. (DLR)
- files.c:
  add_open_files()
	- Make the saving of marked status in open_files->file_flags
	  work properly again; a tweak to the ISSET() macro in 1.3.0
	  to make it only return 0 or 1 broke it. (DLR)
  write_marked()
	- New function used to write the current marked selection to a
	  file, split out from do_writeout(). (DLR)
- global.c:
  shortcut_init()
	- Only allow verbatim input when we're not in view mode. (DLR)
- nano.c:
  do_verbatim_input()
	- Remove the now-unneeded code to disable XON, XOFF, and
	  suspend, since we now go into raw mode in
	  get_verbatim_kbinput() and bypass them. (DLR)
  do_spell(), do_int_speller(), do_alt_speller()
	- Modify to write only the current selection from a file to the
	  temporary file used for spell checking when the mark is on,
	  and add a few miscellaneous cosmetic cleanups. (DLR)
  signal_init()
	- Trap SIGQUIT in addition to turning it off via termios in
	  main().  This is consistent with SIGINT, which we trap here
	  and turn off via termios in main(), as well as with the
	  associated comment. (DLR)
  handle_sigwinch()
	- Set keypad() to TRUE and switch to cbreak mode just before
	  calling siglongjmp(), in case we resized during verbatim
	  input. (DLR)
  main()
	- Move the call to raw() on systems that don't define
	  _POSIX_VDISABLE outside the main input/output loop, as it
	  doesn't need to be called every time through the loop.  Call it
	  instead of cbreak() on such systems, as it overrides cbreak()
	  anyway. (DLR)
- search.c:
  do_replace_loop()
	- Fix segfault when doing a regex replace of a string that